--- a/reservations.html
+++ b/reservations.html
@@ -64,7 +64,7 @@
             </div>
             <!-- MODAL BUTTON -->
             <div class="modal-bg">
-                <div class="modal-dialog">
+                <div class="dialog">
                     <h4>Table Booked</h4>
                     <p>Thank you. A confirmation email has been sent to your email address</p>
                     <button class="button" onclick="window.location.href='index.html'">Home</button>
