--- a/bookings.html
+++ b/bookings.html
@@ -65,7 +65,7 @@
             </div>
             <!-- MODAL BUTTON -->
             <div class="modal-bg">
-                <div class="modal-dialog">
+                <div class="dialog">
                     <h4>Room Booked</h4>
                     <p>Thank you. A confirmation email has been sent to your email address</p>
                     <button class="button" onclick="window.location.href='index.html'">Home</button>
