--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
             <section class="landing">
                 <div class="collage">
                     <div class="wrapper">
-                        <img src="images/winery5.png" alt="winery1" class="winery-image">
+                        <img src="https://images.unsplash.com/photo-1558565850-13a967c4519f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" alt="winery1" class="winery-image">
                         <div class="middle">
                             <div class="image-text" id="wine-img">Wine Menu</div>
                         </div>
                     </div>
                     <div class="wrapper">
-                        <img src="images/winery2.png" alt="winery2" class="winery-image">
+                        <img src="https://images.unsplash.com/photo-1552712095-7bf5c609a1be?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1051&q=80" alt="winery2" class="winery-image">
                         <div class="middle">
                             <div class="image-text" id="vineyard-img">Vineyards</div>
                         </div>
