--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
                         </div>
                     </div>
                     <div class="wrapper">
-                        <img src="images/winery1.png" alt="winery3" class="winery-image">
+                        <img src="https://images.unsplash.com/photo-1558241665-89718b74c89c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1051&q=80" alt="winery3" class="winery-image">
                         <div class="middle">
                             <div class="image-text" id="accom-img">Accommodation</div>
                         </div>
                     </div>
                     <div class="wrapper">
-                        <img src="images/winery4.png" alt="winery4" class="winery-image">
+                        <img src="https://images.unsplash.com/photo-1554982612-dee66ebddaec?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1489&q=80" alt="winery4" class="winery-image">
                         <div class="middle">
                             <div class="image-text" id="restaurant-img">Restaurant</div>
                         </div>
