--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
         <content>
             <section class="landing">
                 <div class="nav-buttons">
-                    <button class="button-inverse">Book Room</button>
-                    <button class="button-inverse">Book Table</button>
+                    <button class="button-inverse" onclick="window.location.href='bookings.html'">Book Room</button>
+                    <button class="button-inverse" onclick="window.location.href='reservations.html'">Book Table</button>
                     <button class="button-inverse">Wine Store</button>
                     <button class="button-inverse">The Club</button>
                 </div>
