--- a/bookings.html
+++ b/bookings.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bookings</title>
     <script src="https://kit.fontawesome.com/4eb8aefcc7.js"></script>
-    <link rel="stylesheet" href="./dist/css/app.min.css">
+    <link rel="stylesheet" href="./dist/app.min.css">
     <link
         href="https://fonts.googleapis.com/css?family=Domine:400,700|Open+Sans:400,600|Playfair+Display:400,600,700&display=swap"
         rel="stylesheet">
@@ -18,7 +18,7 @@
         <!-- NAVBAR -->
         <header class="header">
             <!-- <nav class="navigation"> -->
-            <a href="index.html"><img src="images/estateblacklogo-clearcut.png" alt="blackestate" class="logo"></a>
+            <a href="index.html"><img src="images/estateblacklogo-white.png" alt="blackestate" class="logo"></a>
             <div class="nav-links">
                 <ul>
                     <li><a href="bookings.html">BOOK ACCOMMODATION</a></li>
