--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
         <content>
             <section class="landing">
                 <div class="nav-buttons">
-                    <button class="button-inverse" onclick="window.location.href='bookings.html'">Book Room</button>
-                    <button class="button-inverse" onclick="window.location.href='reservations.html'">Book Table</button>
-                    <button class="button-inverse">Wine Store</button>
-                    <button class="button-inverse">The Club</button>
+                    <a href="bookings.html">Book Room</a>
+                    <a href="reservations.html">Book Table</a>
+                    <a>Wine Store</a>
+                    <a>The Club</a>
                 </div>
                 <div class="collage">
                     <div class="wrapper">
